Unified type API